<resources>
    <string name="app_name">SkyLab Tel</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="log_in">LOG IN</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="signup">SIGNUP</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="_91">+91</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="forgot_n_password">Forgot \n Password</string>
    <string name="enter_the_email_address_associated_with_your_account">Enter the email address associated with your account.</string>
    <string name="forgot">Forgot</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_n_password">Change \n Password</string>
    <string name="save">Save</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="terms_policy"><![CDATA[Terms & Policy]]></string>
    <string name="logout">Logout</string>
    <string name="email_id">Email ID</string>
    <string name="unique_number">Unique Number</string>
    <string name="business_name">Business Name</string>
    <string name="plan_expiry_date">Plan Expiry Date</string>
    <string name="subscription_details">Subscription Details</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="renew_now">Renew Now</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="microphone">Microphone</string>
    <string name="record_audio">record audio</string>
    <string name="call_logs">Call Logs</string>
    <string name="read_and_write_phone_call_log">Read and write phone call log</string>
    <string name="contacts">Contacts</string>
    <string name="access_your_contacts">Access your contacts</string>
    <string name="phone">Phone</string>
    <string name="make_and_manage_phone_calls">Make and manage phone calls</string>
    <string name="cancel">Cancel</string>
    <string name="continu">Continue</string>
    <string name="just_now">Just Now</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="star">*</string>
    <string name="zero">0+</string>
    <string name="hash">#</string>
    <string name="keypad">Keypad</string>
    <string name="speaker">Speaker</string>
    <string name="mute">Mute</string>
    <string name="type_a_message">Type a message</string>
    <string name="enter_the_verification_code_we_just_sent_you_on_your_emailaddress">Enter the verification code we just sent you on your emailaddress</string>
    <string name="verify">Verify</string>
    <string name="network_error">Network Error</string>
    <string name="no_internet_available">No Internet Available</string>
    <string name="assistant_login_desc">Please enter your username and password with your SIP domain</string>
    <string name="assistant_generic_account">Use SIP account</string>
    <string name="content_description_username_field">Username field</string>
    <string name="content_description_domain_field">Domain field</string>
    <string name="content_description_display_field">Display name field</string>
    <string name="pref_transport_udp">UDP</string>
    <string name="pref_transport_tcp">TCP</string>
    <string name="pref_transport_tls">TLS</string>
    <string name="assistant_display_name_optional">Display name (optional)</string>
    <string name="transport_unsupported">Unsupported transport</string>
    <string name="transport">Transport</string>
    <string name="username">Username</string>
    <string name="domain">Domain</string>
    <string name="service_name">SkyLab Service</string>
    <string name="addressbook_label">Linphone</string>
    <string name="notification_title">Linphone</string>
    <string name="wait_dialog_text">Starting up</string>
    <string name="notification_registered">%s connected</string>
    <string name="notification_register_failure">%s failed to connect</string>
    <string name="tunnel_host"></string>
    <string name="about_version">Linphone Android %s</string>
    <string name="about_liblinphone_version">Linphone Core %s</string>
    <string name="about_liblinphone_sdk_version">Linphone SDK %s</string>
    <string name="about_privacy_policy">Visit our privacy policy</string>
    <string name="sync_account_name">linphone contacts</string>
    <string name="notification_reply_label">Reply</string>
    <string name="notification_replied_label">Sent reply: %s</string>
    <string name="notification_call_hangup_label">Hangup</string>
    <string name="notification_call_answer_label">Answer</string>
    <string name="notification_mark_as_read_label">Mark as read</string>
    <string name="userid">User-id (optional)</string>
    <string name="phone_number">Phone number</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="international_prefix">International phone number prefix</string>
    <string name="display_name">Display name</string>
    <string name="remote_provisioning_url">URL</string>
    <string name="email">Email</string>
    <string name="delete_text">Are you sure you want to delete your selection?</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="accept">Accept</string>
    <string name="open">Open</string>
    <string name="continue_text">Continue</string>
    <string name="about">About</string>
    <string name="deny">Deny</string>
    <string name="no_account">No account configured</string>
    <string name="search">Search</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="missed">Missed</string>
    <string name="connect">Connection</string>
    <string name="decline">Decline</string>
    <string name="conference">Conference</string>
    <string name="link">Link</string>
    <string name="link_account_popup">Do you want to link the account %s with your phone number?</string>
    <string name="maybe_later">Maybe later</string>
    <string name="later">Later</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="link_account">Link your account</string>
    <string name="update_available">An update is available</string>
    <string name="do_not_ask_again">Do not show again</string>
    <string name="delete_contacts_text">Are you sure you want to delete these contacts?\nThey will be deleted from your phone as well!</string>
    <string name="logs_url_copied_to_clipboard">Logs url copied into clipboard</string>
    <string name="app_description">the <i>libre</i> SIP client</string>
    <string name="welcome">Welcome</string>
    <string name="assistant">Assistant</string>
    <string name="assistant_create_account">Create account</string>
    <string name="assistant_link_account">Link account</string>
    <string name="assistant_continue">Continue</string>
    <string name="assistant_activate">Activate your account</string>
    <string name="assistant_finish">Finish configuration</string>
    <string name="assistant_validate_account_1">Your account is created. Please check your mails to validate your account:</string>
    <string name="assistant_validate_account_2">Once it is done, come back here and click on the button.</string>
    <string name="assistant_welcome_desc">This assistant will help you configure and use your SIP account.</string>
    <string name="assistant_linphone_login_desc">Please enter your username and password of Linphone account</string>
    <string name="assistant_remote_provisioning_desc">Please provide your provisioning URL</string>
    <string name="assistant_create_account_phone_number_address">Your SIP address is</string>
    <string name="assistant_login_linphone">Use Linphone account</string>
    <string name="assistant_login_generic">Use SIP account</string>
    <string name="assistant_remote_provisioning">Fetch remote configuration</string>
    <string name="assistant_create_account_part_1">Please confirm your country code and enter your phone number</string>
    <string name="assistant_create_account_part_2">We have sent you a SMS with a validation code to your phone number:</string>
    <string name="assistant_create_account_part_3">To complete your phone number verification, please enter the 4 digit code below:\n</string>
    <string name="assistant_create_account_part_email">Please enter an username, email and password for your Linphone account</string>
    <string name="assistant_linphone_account">Use your Linphone account</string>
    <string name="assistant_remote_provisioning_title">Fetch remote configuration</string>
    <string name="assistant_fetch_apply">Fetch and apply</string>
    <string name="assistant_launch_qrcode">QRCode</string>
    <string name="assistant_login">Login</string>
    <string name="assistant_ec_calibration">Echo canceler calibration in progress</string>
    <string name="assistant_remote_provisioning_login">Enter your login</string>
    <string name="assistant_account_not_validated">Your account has not been validated yet.</string>
    <string name="assistant_error_confirmation_code">The confirmation code is invalid.\nPlease try again.</string>
    <string name="assistant_account_validated">Your account has been validated.</string>
    <string name="assistant_error_bad_credentials">Incorrect username or password</string>
    <string name="assistant_codec_down_question">Do you agree to download OpenH264 Video Codec provided by Cisco Systems, Inc.?</string>
    <string name="assistant_codec_downloading">Downloading OpenH264 Video Codec provided by Cisco Systems, Inc.</string>
    <string name="assistant_openh264_downloading">Downloading OpenH264</string>
    <string name="assistant_openh264_restart">Before you can use OpenH264 codec you must restart %s.</string>
    <string name="assistant_openh264_error">Sorry an error has occurred.</string>
    <string name="assistant_codec_downloaded">OpenH264 Video Codec provided by Cisco Systems, Inc. downloaded.</string>
    <string name="wizard_failed">An error occurred, try again later.</string>
    <string name="wizard_server_unavailable">Server unreachable, verify your network connection.</string>
    <string name="wizard_username_unavailable">This username is already taken.</string>
    <string name="assistant_phone_number_unavailable">This phone number is already used.\nPlease type a different number.\nYou can delete your existing account if you want to reuse your phone number.</string>
    <string name="wizard_username_incorrect">Your username is invalid.</string>
    <string name="assistant_phone_number_incorrect">Your phone number is invalid.</string>
    <string name="wizard_email_incorrect">Your email is invalid.</string>
    <string name="wizard_password_incorrect">Your password is invalid</string>
    <string name="wizard_passwords_unmatched">Passwords do not match.</string>
    <string name="setup_confirm_username">Your username will be %s.\n\nIt may differ from your input to match requirements.\nDo you accept?</string>
</resources>