<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="30dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:weightSum="2"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_margin="30dp">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:singleLine="true"
                android:layout_weight="1"
                android:drawableEnd="@drawable/select_username"
                android:drawablePadding="5dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:backgroundTint="@color/colorBackground"
                android:padding="8dp"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:background="@color/colorText"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:singleLine="true"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:drawableEnd="@drawable/select_username"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:backgroundTint="@color/colorBackground"
                android:padding="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:drawableEnd="@drawable/select_mail"
                android:drawablePadding="5dp"
                android:backgroundTint="@color/colorBackground"
                android:padding="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_91"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:padding="5dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint"
                android:drawableEnd="@drawable/select_mobile"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:inputType="phone"
                android:backgroundTint="@color/colorBackground"
                android:padding="8dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/signup"
            android:padding="15dp"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/border_left_corner"
            android:layout_gravity="end|center_horizontal"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:id="@+id/ll_login_btn"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/already_have_an_account"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="2dp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBtnText"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>