<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.activities.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="30dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/et_username"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="16sp"
            android:fontFamily="@font/raleway_regular"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:backgroundTint="@color/colorBackground"
            android:padding="8dp"/>
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/select_username"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/password"
            android:id="@+id/et_password"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:singleLine="true"
            android:textSize="16sp"
            android:fontFamily="@font/raleway_regular"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorBackground"
            android:padding="8dp"/>
        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/select_password"/>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:id="@+id/forgot_btn"
            android:visibility="invisible"
            android:textSize="16sp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:textSize="50sp"
            android:fontFamily="@font/raleway_bold"
            android:layout_marginBottom="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:textColor="@color/colorText"
            android:text="@string/login"
            android:id="@+id/tv_login_btn"
            android:padding="15dp"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:fontFamily="@font/raleway_semibold"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/button_bg"
            android:layout_gravity="end|center_horizontal"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:visibility="gone"
            android:id="@+id/ll_signIn_btn">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/don_t_have_an_account"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="2dp"
                android:textAlignment="center"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBtnText"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</RelativeLayout>